--- a/styles/styles.css
+++ b/styles/styles.css
@@ -183,6 +183,33 @@ header ul {
     margin-top: 24px;
 }
 
+.about{
+    padding: 40px 24px 120px 24px;
+}
+
+.about-content-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 80px;
+}
+
+.about-title{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    text-align: center;
+    max-width: 795px;
+}
+
+.line{
+    width: 100%;
+    height: 1px;
+    background-color: #FFFFFF;
+    opacity: 10%;
+}
+
 /* Mobile Style */
 
 @media screen and (max-width:768px) {
