--- a/styles/styles.css
+++ b/styles/styles.css
@@ -45,6 +45,13 @@ body {
     opacity: 80%;
 }
 
+.body-2-16px {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
+    opacity: 60%;
+}
+
 header ul {
     list-style: none;
 }
@@ -183,6 +190,8 @@ header ul {
     margin-top: 24px;
 }
 
+/* About */
+
 .about{
     padding: 40px 24px 120px 24px;
 }
@@ -222,6 +231,47 @@ header ul {
 .stats-wrapper h2{
     color: rgba(0, 255, 136, 1);
     margin-bottom: 16px;
+}
+
+/* Why */
+
+.why-choose-us{
+    padding: 120px 24px;
+    background-color: rgba(35, 14, 61, 1);
+}
+
+.why-content-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+}
+
+.why-cards-wrapper{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 30px;
+}
+
+.why-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    gap: 16px;
+    padding: 40px;
+    border-radius: 40px;
+    background-color: rgba(53, 17, 101, 0.4);
+}
+
+.card-1 {
+    grid-row: span 2;
+}
+
+.card-2 {
+    grid-column: span 2;
 }
 
 /* Mobile Style */
@@ -293,7 +343,7 @@ header ul {
         flex-wrap: wrap;
     }
 
-    ..about{
+    .about{
     padding: 40px 20px;
 }
 
@@ -303,6 +353,32 @@ header ul {
 
 .stats-wrapper{
     grid-template-columns: repeat(2, 1fr);
+}
+
+.why-choose-us{
+    padding: 40px 20px;
+    
+}
+
+.why-cards-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.why-content-wrapper h2{
+    text-align: center;
+}
+
+.why-content-wrapper{
+    gap: 16px;
+}
+
+.why-card{
+    padding: 24px;
+    border-radius: 24px;
 }
 
 }
