--- a/styles/styles.css
+++ b/styles/styles.css
@@ -274,6 +274,51 @@ header ul {
     grid-column: span 2;
 }
 
+/* Apps */
+
+.apps{
+    padding: 120px 24px;
+}
+
+.episode{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-bottom: 120px;
+}
+
+.episode-wrapper{
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
+    width: 100%;
+}
+
+.episode-card{
+    border-radius: 24px;
+    overflow: hidden;
+}
+
+.episode-content{
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    background-color: rgba(37, 13, 68, 1);
+}
+
+.duration{
+    display: flex;
+    gap: 6px;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    color: #00FF88;
+}
+
 /* Mobile Style */
 
 @media screen and (max-width:768px) {
@@ -284,6 +329,10 @@ header ul {
 
     .h2 {
         font-size: 32px;
+    }
+
+    .h3{
+        font-size: 20px;
     }
 
     .header {
@@ -379,6 +428,25 @@ header ul {
 .why-card{
     padding: 24px;
     border-radius: 24px;
+}
+
+.apps{
+    padding: 40px 20px;
+}
+
+.episode{
+    gap: 24px;
+    margin-bottom: 60px;
+}
+
+.episode-wrapper{
+    flex-direction: column;
+    gap: 16px;
+}
+
+.episode-content{
+    padding: 16px;
+    gap: 8px;
 }
 
 }
