--- a/styles/styles.css
+++ b/styles/styles.css
@@ -319,6 +319,53 @@ header ul {
     color: #00FF88;
 }
 
+.host{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+.host-speech{
+    padding: 40px;
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    border-radius: 40px;
+    background-color: rgba(53, 17, 101, 0.4);
+}
+
+.speech{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.speech h3{
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.socials{
+    display: flex;
+    gap: 8px;
+}
+
+.social-icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    border-radius: 999px;
+    border: 1px solid rgba(83, 60, 114, 1);
+}
+
+.social-icon img{
+    width: 20px;
+}
+
 /* Mobile Style */
 
 @media screen and (max-width:768px) {
@@ -447,6 +494,24 @@ header ul {
 .episode-content{
     padding: 16px;
     gap: 8px;
+}
+
+.host{
+    gap: 24px;
+}
+
+.host-speech{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 24px;
+    gap: 16px;
+}
+
+.speech{
+    justify-content: center;
+    align-items: center;
 }
 
 }
