Fix Image Width

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -545,6 +545,10 @@ footer{
     gap: 16px;
 }
 
+.host-image{
+    width: 150px;
+}
+
 .speech{
     justify-content: center;
     align-items: center;
